--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^16.1.1",
+    "@types/three": "^0.182.0",
     "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -17,9 +18,11 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
+    "ogl": "^1.0.11",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
